Fixed missing dependency in properties file, fixed a few deprecation warnings.